<?xml version="1.0"?>
<package format="2">
  <name>pose_control</name>
  <version>0.0.0</version>
  <description>The pose_control package</description>
  <maintainer email="zzz@todo.todo">zzz</maintainer>
  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_visual_tools</build_depend>

    <build_depend>franka_gripper</build_depend>

    <exec_depend>moveit_core</exec_depend> 
    <exec_depend>moveit_ros_planning_interface</exec_depend> 
    <exec_depend>moveit_visual_tools</exec_depend>
    
    <exec_depend>franka_gripper</exec_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
      <!-- Other tools can request additional information be placed here -->

    </export>


</package>
